--- a/sts_workspace/hello-spring/src/main/resources/static/css/common.css
+++ b/sts_workspace/hello-spring/src/main/resources/static/css/common.css
@@ -6,8 +6,23 @@ div.grid > div.btn-group {
   grid-column: 1 / -1;
 }
 
-div.grid div.right-align {
+.right-align {
   text-align: right;
+}
+
+.center-align {
+  text-align: center;
+}
+.left-align {
+  text-align: left;
+}
+
+.ellipsis {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 100%;
+  display: inline-block;
 }
 
 label {
@@ -19,6 +34,10 @@ input,
 textarea {
   padding: 10px;
   border: 1px solid #ccc;
+}
+
+input[type="file"] {
+  padding: 0;
 }
 
 button:focus,
@@ -33,4 +52,48 @@ a:visited,
 a:link {
   color: #333;
   text-decoration: none;
+}
+
+table.table {
+  border-collapse: collapse;
+  border: 1px solid #ddd;
+  width: 100%;
+  table-layout: fixed;
+}
+table.table > thead > tr {
+  background-color: #fff;
+}
+table.table > thead th {
+  padding: 10px;
+  color: #333;
+}
+table.table th,
+table.table td {
+  border-right: 1px solid #f0f0f0;
+}
+table.table th:last-child,
+table.table td:last-child {
+  border-right: none;
+}
+table.table > tbody tr:nth-child(odd) {
+  background-color: #f5f5f5;
+}
+table.table > tbody tr:hover {
+  background-color: #fafafa;
+}
+table.table > tbody td {
+  padding: 10px;
+  color: #333;
+}
+
+table.table > tbody td[colspan] {
+  text-align: center;
+}
+
+ul.horizontal-list {
+  padding: 0px;
+  margin: 0px;
+}
+ul.horizontal-list li {
+  display: inline;
 }
