--- a/sts_workspace/hello-spring/src/main/resources/static/css/common.css
+++ b/sts_workspace/hello-spring/src/main/resources/static/css/common.css
@@ -138,6 +138,8 @@ ul.page-nav {
   margin: 0px;
   padding: 0px;
   text-align: center;
+  display: flex;
+  justify-content: center;
 }
 ul.page-nav > li {
   display: inline-block;
@@ -147,4 +149,24 @@ ul.page-nav > li {
 ul.page-nav > li.active > a {
   color: #f00;
   font-weight: bold;
+}
+
+/******************검색 부분********************/
+
+form#search-form {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+form#search-form > ul.page-nav {
+  flex-grow: 1;
+}
+
+form#search-form > * {
+  margin-right: 0.5rem;
+  white-space: nowrap;
+}
+
+form#search-form > *:last-child {
+  margin-right: 0;
 }
