--- a/sts_workspace/hello-spring/src/main/resources/static/css/common.css
+++ b/sts_workspace/hello-spring/src/main/resources/static/css/common.css
@@ -4,6 +4,24 @@
   font-size: 17px;
 }
 
+body {
+  margin: 0;
+}
+
+#layout {
+  display: grid;
+  grid-template-columns: 150px 1fr;
+  grid-template-rows: 100px 1fr;
+  gap: 10px;
+}
+
+#header {
+  grid-column: 1 / -1;
+}
+
+#aside {
+}
+
 div.grid > div.btn-group {
   grid-column: 1 / -1;
 }
